[project]
name = "argumentreferee"
version = "0.1.0"
description = "An AI-powered argument referee that gives neutral verdicts, identifies logical fallacies, and suggests compromises."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]